# Mudra.ai

./: .gitignore  MUDRA.md  README.md
backend/: .env.example  compliance.db-journal  pyproject.toml
backend/.qdrant/: meta.json
backend/.qdrant/collection/clauses/: storage.sqlite
backend/app/: main.py
backend/app/api/: audit.py  billing.py  corpus.py  ingestion.py  reviews.py  system.py  voice.py  whatsapp.py
backend/app/core/: auth.py  config.py  db.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: billing.py  convex_bridge.py  grouping.py  review_service.py
backend/app/services/agents/: llm.py  pipeline.py
backend/app/services/audit/: pdf.py
backend/app/services/checks/: deterministic.py
backend/app/services/corpus/: cascade.py  chunker.py  ingest.py
backend/app/services/ingestion/: linkup.py
backend/app/services/retrieval/: qdrant_store.py  store.py
backend/app/services/voice/: elevenlabs.py  narration.py
backend/app/services/whatsapp/: format.py
backend/app/workers/: consumer.py  scraper.py
backend/tests/: conftest.py  test_api.py  test_chunker.py  test_consumer.py  test_deterministic_checks.py  test_grouping.py  test_lineage_and_tables.py  test_llm_golden.py  test_retrieval_parity.py  test_review_service.py  test_stage3_checks.py  test_temporal.py
convex/: README.md  package-lock.json  package.json
docs/: ARCHITECTURE.md
frontend/: .env.example  index.html  package-lock.json  package.json
ingestion/: go.mod  go.sum  targets.json
tools/: render_pdf.swift
web/: .env.example  (+4 more)
(+105 files in other folders)
